--- a/index.html
+++ b/index.html
@@ -6,37 +6,70 @@
   <title>Pablo Abataneo — CV</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    /* Print: transformar a versión clara y simplificada */
     @media print {
-      .no-print { display: none; }
+      body { background: white !important; color: #111 !important; }
+      .no-print { display: none !important; }
+      .bg-gradient-to-r, .bg-gray-900 { background: white !important; box-shadow: none !important; }
+      .text-gray-200, .text-gray-300, .text-gray-400, .text-gray-500, .text-gray-700 { color: #222 !important; }
+      .text-indigo-400, .text-indigo-600, .from-indigo-600 { color: #111 !important; }
+      .rounded { border-radius: 0 !important; }
+      .shadow-xl { box-shadow: none !important; }
+      .border-t { border-top: 1px solid #ddd !important; }
+      .object-cover { object-fit: cover; }
+      button { display: none !important; }
     }
+
+    /* Small tweaks for screen */
     a.contact-link { color: #7c3aed; text-decoration: none; }
     a.contact-link:hover { text-decoration: underline; }
+
+    /* Make sure long text wraps nicely when printed */
+    .print-wrap { word-wrap: break-word; hyphens: auto; }
+
+    /* Ensure image won't overflow */
+    .photo { width: 160px; height: 160px; object-fit: cover; }
+
+    /* When screen is narrow, stack nicely */
+    @media (max-width: 640px) {
+      .photo { width: 120px; height: 120px; }
+    }
   </style>
 </head>
-<body class="bg-gray-900 text-gray-100 antialiased">
+<body class="bg-gray-900 text-gray-100 antialiased print-wrap">
   <div class="max-w-4xl mx-auto p-6">
     <div class="bg-gradient-to-r from-gray-800 via-gray-900 to-black rounded-lg shadow-xl overflow-hidden">
-      <div class="p-6 flex gap-6">
+      <!-- Header -->
+      <div class="p-6 flex flex-col sm:flex-row gap-6 items-center">
+        <!-- Foto -->
         <div class="w-40 flex-shrink-0">
-          <img src="pablo_abataneo_photo.jpg"
+          <!-- Asegurate que el archivo pablo_abataneo_photo.jpg esté en la misma carpeta que este index.html -->
+          <img src="pablo_abataneo_photo.jpg" alt="Foto de Pablo Abataneo" class="photo rounded-full border-2 border-gray-700 shadow-md">
         </div>
-        <div class="flex-1">
+
+        <!-- Info principal -->
+        <div class="flex-1 min-w-0">
           <h1 class="text-3xl font-extrabold mb-1 font-sans">Pablo Abataneo</h1>
           <p class="text-gray-400 mb-3">Técnico Superior en Desarrollo de Software — ITEC, Río Cuarto</p>
+
           <div class="flex flex-wrap gap-3 text-sm">
             <div class="px-3 py-1 bg-gray-800 rounded text-gray-300">✉️ <a class="contact-link" href="mailto:noeabataneo@gmail.com">noeabataneo@gmail.com</a></div>
             <div class="px-3 py-1 bg-gray-800 rounded text-gray-300">📞 <a class="contact-link" href="tel:+543584019349">+54 9 3584 019349</a></div>
             <div class="px-3 py-1 bg-gray-800 rounded text-gray-300">💬 <a class="contact-link" href="https://wa.me/543584019349?text=Hola%20Pablo%2C%20te%20contacto%20desde%20tu%20CV" target="_blank" rel="noopener">Chatear por WhatsApp</a></div>
-            <div class="px-3 py-1 bg-gray-800 rounded text-gray-300">💻 Github: <span class="text-indigo-400">github.com/pan-19</span></div>
-
+            <div class="px-3 py-1 bg-gray-800 rounded text-gray-300">💻 <a class="contact-link" href="https://github.com/pan-19" target="_blank" rel="noopener">github.com/pan-19</a></div>
+            <div class="px-3 py-1 bg-gray-800 rounded text-gray-300">📷 <a class="contact-link" href="https://www.instagram.com/zeus_suplement/" target="_blank" rel="noopener">zeus_suplement</a></div>
           </div>
         </div>
-        <div class="w-48 text-right">
+
+        <!-- Rol -->
+        <div class="w-full sm:w-48 text-right sm:text-right mt-3 sm:mt-0">
           <div class="inline-block px-3 py-2 bg-gradient-to-br from-indigo-600 to-purple-600 rounded text-white font-mono text-sm">Programador / SysAdmin</div>
         </div>
       </div>
 
+      <!-- Body: sidebar + main -->
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6 border-t border-gray-800">
+        <!-- Sidebar -->
         <aside class="md:col-span-1 space-y-4">
           <div>
             <h2 class="text-sm text-gray-300 uppercase tracking-wide">Perfil</h2>
@@ -65,6 +98,7 @@
           </div>
         </aside>
 
+        <!-- Main -->
         <main class="md:col-span-2 space-y-6">
           <section>
             <h2 class="text-lg text-white font-semibold">Experiencia</h2>
@@ -92,13 +126,18 @@
           </section>
 
           <section>
+            <h2 class="text-lg text-white font-semibold">Proyectos & Extras</h2>
+            <ul class="mt-2 text-sm text-gray-200 list-disc list-inside">
+              <li>Automatización de flujos de datos: scripts/cron y Google Sheets para reportes automatizados.</li>
+              <li>Soporte y mantenimiento de equipos / servidores en entornos Linux y Windows.</li>
+            </ul>
           </section>
         </main>
       </div>
 
+      <!-- Footer / print -->
       <div class="p-6 border-t border-gray-800 text-sm text-gray-400">
         <div class="flex justify-between items-center">
-          <div></div>
           <div class="no-print">
             <button onclick="window.print()" class="px-3 py-1 bg-indigo-600 rounded text-white text-sm">Imprimir / Guardar PDF</button>
           </div>
